<resources>
    <string name="app_name">Smart GP Clinic</string>


    <!--    Activity Check Unique Code-->
    <string name="tv_checkUniqueCode">Check your Unique Code</string>
    <string name="tv_hospitalUniqueCode">Enter H.. or h..for Hospital</string>
    <string name="tv_doctorUniqueCode">Enter D.. or d..for Doctor</string>
    <string name="et_checkUniqueCode">Enter your Unique Code</string>
    <string name="btn_checkUniqueCode">Check Code</string>

    <!--    Activity Hospital Registration-->
    <string name="tv_hospReg">Enter Hospital details</string>
    <string name="et_hospUniqueCodeReg">Unique Code</string>
    <string name="et_hospNameReg">Hospital Name</string>
    <string name="et_hospEmailReg">Email Address</string>
    <string name="et_hospPassReg">Password</string>
    <string name="et_hospConfPassReg">Confirm Password</string>
    <string name="btn_hospReg">Register</string>
    <string name="btn_hospLog">Log in</string>

    <!--    Activity Main-->
    <string name="tv_mainPage">Welcome to Smart GP Clinic</string>
    <string name="btn_nfcMainPage">NFC</string>
    <string name="btn_loginMainPage">Log In</string>
    <string name="btn_registerMainPage">Register</string>

</resources>