<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pages"
    tools:context=".HospitalRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHospReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_hospReg"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/etHospUniqueCodeReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hospUniqueCodeReg"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textSize="22sp"
                tools:ignore="Autofill,RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/etHospNameReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hospNameReg"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textSize="22sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/etHospEmailReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hospEmailReg"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="22sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etHospPassReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hospPassReg"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etHospConfPassReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:ems="10"
                android:hint="@string/et_hospConfPassReg"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="22sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnHospReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_hospReg"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnHospLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_hospLog"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>